--- a/src/style.css
+++ b/src/style.css
@@ -41,20 +41,83 @@ main {
 }
 
 .die-face {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 50px;
     width: 50px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     cursor: pointer;
-}
-
-.die-num {
     font-size: 2rem;
+    
+    
 }
 
+/*-----------------------------------die two*/
+.die-two-a{
+    transform: translate(-110%, -160%);
+}
+.die-two-b{
+    transform: translate(110%, 160%);
+}
+/*-----------------------------------die three*/
+.die-three-a{
+    transform: translate(-60%, -160%);
+}
+
+.die-three-c{
+    transform: translate(60%, 160%);
+}
+/*-----------------------------------die four*/
+.die-four-a {
+    transform: translate(-15%, -160%);
+    
+}
+.die-four-b {
+    transform: translate(-105%, 160%);
+}
+.die-four-c {
+    transform: translate(110%, -160%);
+    
+}
+.die-four-d {
+    transform: translate(15%, 160%);
+}
+/*-----------------------------------die five*/
+.die-five-a {
+    transform: translate(40%, -160%);
+}
+.die-five-b {
+    transform: translate(-60%, 160%);
+}
+
+.die-five-d {
+    transform: translate(60%, -160%);
+}
+.die-five-e {
+    transform: translate(-40%, 160%);
+}
+
+/*-----------------------------------die six*/
+.die-six-a {
+    transform: translate(40%, -160%);
+}
+.die-six-b {
+    transform: translate(-50%, 160%);
+}
+.die-six-c {
+    transform: translate(-160%, 0%);
+}
+.die-six-d {
+    transform: translate(160%, 0%);
+}
+.die-six-e {
+    transform: translate(50%, -160%);
+}
+.die-six-f {
+    transform: translate(-40%, 160%);
+}
 .roll-dice {
     height: 50px;
     width: 150px;
